LPS-84493 Title is no longer cropped.

--- a/modules/apps/staging/staging-bar-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/staging/staging-bar-web/src/main/resources/META-INF/resources/css/main.scss
@@ -201,3 +201,7 @@
 		top: 100%;
 	}
 }
+
+.header-title-with-overflow {
+	overflow: visible !important;
+}
